# storage/app.py
@@ -20,6 +20,10 @@ import pykafka
 #from flask_cors import CORS, cross_origin
 from sqlalchemy import and_
 
+def health_check():
+    """ Health Check Endpoint """
+    return '', 200
+
 if "TARGET_ENV" in os.environ and os.environ["TARGET_ENV"] == "test":
     print("In Test Environment")
     app_conf_file = "/config/app_conf.yaml"
